# axum-diesel-template

./: .env.example  Cargo.toml  README.md  api.Dockerfile  docker-compose.yml
migrations/2023-07-23-091722_init/: down.sql  up.sql
src/: backend.rs  main.rs  models.rs  routes.rs  schema.rs
