[package]
name = "axum-diesel-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
tracing = "0.1.37"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tracing-subscriber = "0.3.17"
tokio = { version = "1.29.1", features = ["full"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15"
chrono = { version = "0.4.26", features = ["serde"] }